@@ -1,4 +1,7 @@
 2011-09-21 gabriel.oliveira
+* Dynamize ung listbox height
+
+2011-09-21 gabriel.oliveira
 * Fix image url location
 
 2011-09-21 gabriel.oliveira
